--- a/helm/vprofilecharts/templates/vprodbdep.yml
+++ b/helm/vprofilecharts/templates/vprodbdep.yml
@@ -11,7 +11,7 @@ spec:
   replicas: 1
   template:
     metadata:
-      labels: {{.Values.appimage}}
+      labels:
         app: vprodb
     spec:
       containers:
